syntax = "proto3";

package raftpb;

// Example RequestVote RPC arguments structure.
message RequestVoteArgs {
    // Your data here (2A, 2B).
    uint64 term = 1;
    uint64 candidate_id = 2;
    int64 last_log_idx = 3;
    uint64 last_log_term = 4;
}

// Example RequestVote RPC reply structure.
message RequestVoteReply {
    // Your data here (2A).
    uint64 term = 1;
    bool vote_granted = 2;
}
